# unraphael

./: .gitignore  .pre-commit-config.yaml  .streamlit  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  dash  images  install venv.txt  mkdocs.yml  packages.txt  pyproject.toml  readthedocs.yaml  requirements.txt  requirements_full.txt  setup.py
.github/workflows/: code-style.yml  publish.yaml  tests.yaml
dash/: config.py  config.yaml  dashboard.py  image_sim.py  normalization_app.py  outline_contours_and_overlay.py  outline_normalization.py  preprocessing_app.py  readme.md  requirements.txt  sidebar_logo.py  styling.py  widgets.py
dash/.streamlit/: config.toml
dash/pages/: 1_preprocess.py  1_preprocessing.py  2_image_similarity.py
data/raw/: Dimensions Mismatch.xlsx  Index.xlsx
docs/: CITE.md  Makefile  background.md  conf.py  credits.md  index.md  index.rst  links.txt  make.bat  pipeline.md  virtual environment setup.docx
docs/About/: ACTION.md  CITE.md  CONTACT.md  FAQS.md
docs/Background/: ABSTRACT.md  PIPELINE.md
docs/Developers/: CHANGELOG.md  CONTRIBUTE.md  GUIDELINES.md  SOURCE.md
docs/Processing/: ALIGNMENT.md  ANALYSIS.md  CLUSTERING.md  INTRODUCTION.md  PREPROCESSING.md  SEGMENTATION.md
docs/Started/: INSTALLATION.md  ISSUES.md  TUTORIAL1.md  TUTORIAL2.md  TUTORIALS.md  USAGE.md
docs/steps/: alignment.md  analysis.md  clustering.md  preprocessing.md  segmentation.md
docs/tutorials/: image_clustering.md  image_processing.md
paper/: UnraphaelJOSS.docx  paper.bib  paper.md
scripts/: edge_detection_interactive.py
src/: animation.py  background removal.py  blender.py  correlating edges.py  deep image search.py  edge_detection_interactive.py  example image comparison.py  foreground extraction.py  heatmap.py  homography.py  image correlation.py  image similarity comparison.py  main_script2.py  orb similarity and SSIM.py  painting-to-vector-encoding.py  rafael1.py  rafael2.py  rafael3.py  rafael4.py  rafael5.py  rafael6.py  rotation.py  sift_bf.py  sift_bf_heatmap.py  sift_flann.py  sift_flann2.py  sift_interactive.py  template matching.py  workflow.docx
src/0 testing_out/: 14_image alignment.py  2 segment.py  b_w  color_transfer.py  convert_to_vector.py  detectron.py  semrem.py  yolo.py
src/1_image_preprocessing/: 11_authenticate.py  12_painting_photo_sizes.py  14_image alignment_and_overlay.py  15_equal_brightness.py  homography.py  rise_imagenet.py
src/2_outline_extraction/: 21 background removal.py  23 yolo object segmentation.py  24 yolo.py  25 extract_colored_outer_contours.py  26 overlay.py  figure in front.py  foreground extraction.py
src/3_outline_normalization/: 32_contour_detection_interactive.py  Image_segmentation.ipynb  Image_segmentation_baby.ipynb  main_script.py  main_script2.py  main_script3.py  outline normalization.docx
src/4_similarity_analysis/: 42_rotation_analysis.py  42_rotation_analysis2.py  43_relative surface area.py  44_template matching.py  45_brushstroke comparison.py  brushstroke sd comparison.py  deep learning approach.py  sift_interactive.py
src/5_clustering/: 01_conda_environment.yml  imgcluster.py  requirements.txt
src/5_deployment/: all_vecs.npy  streamlit.txt  streamlit_app.py
src/metadata-files/vgg19/: image_data_features.pkl  image_features_vectors.idx
src/unraphael/: __init__.py  cli.py  dash  feature.py  io.py  locations.py  pose.py  preprocess.py  types.py
src/unraphael/dash/: align.py  config.py  equalize.py  home.py  image_clustering.py  image_sim.py  normalization_app.py  outline_contours_and_overlay.py  outline_normalization.py  ratio_analysis.py  readme.md  requirements.txt  styling.py  widgets.py
src/unraphael/dash/pages/: 1_preprocess.py  2_image_similarity.py  3_detect_objects.py  4_compare.py  4_normalization.py  5_cluster.py  6_ratios.py  6_ratioss.py  settings.py  streamlit_detection_page.py
src/unraphael/data/: config.yaml  custom.css
src/unraphael/modules/: comparison_preparation.py  image_preprocessing.py  outline_extraction.py  outline_normalization.py  similarity_analysis.py
tests/: dash_test.py  unraphael_test.py
workflow/: requirements.txt
workflow/0_testing_out/: blender.py  robo.py
workflow/1_image_preprocessing/: 13_animation_of_alignment.py  13_manual_alignment.py  14_image alignment_and_overlay.py  equal_brightness.py
workflow/2_outline_extraction/: 21 background_removal.py  22 face_extractor.py  23 yolo object segmentation.py  24 yolo.py  25 extract_colored_outer_contours.py  26 overlay.py
workflow/3_outline_normalization/: 31_edge_detection_interactive.py  33_morphological operations.py  main_script3.py
workflow/4_similarity_analysis/: 41 number of matching feature points.py  46_sentences.py  47_similarity_measures.py  deep image search.py  gui flann.py  image correlation.py  orb_bf.py  sift_bf.py  sift_flann.py
workflow/5_clustering/: imgcluster_demo.py
workflow/6_deployment/: all_names.npy  processed_images.npy  streamlit_app.py
workflow/6_deployment/old/: app.py  app_work.py
