[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "unraphael"
version = "0.1.0"
description = "Decoding Raphael: Computational Study of the Production and Reproduction of Italian Renaissance Paintings."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Thijs Vroegh", email = "t.vroegh@esciencecenter.nl"},
]
keywords = [
    "art",
    "raphael",
    "computer-vision",
    "renaissance",
]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
]

[project.urls]
homepage = "https://github.com/DecodingRaphael/unraphael"
issues = "https://github.com/DecodingRaphael/unraphael/issues"
documentation = "https://unraphael.readthedocs.io"
changelog = "https://github.com/DecodingRaphael/unraphael/releases"

[project.optional-dependencies]
develop = [
    "bump-my-version",
    "ruff",
    "pre-commit",
    "coverage[toml]",
    "pytest",
    "pycodestyle",
]
docs = [
    "markdown-include",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    # "mknotebooks",
]
publishing = [
    "twine",
    "wheel",
    "build",
]

[project.scripts]

[tool.setuptools]
zip-safe = false
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.coverage.run]
branch = true
source = ["unraphael"]
concurrency = ["multiprocessing"]
data_file = ".coverage"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
files = ["src/unraphael", "tests"]
allow_redefinition = true

[tool.ruff]
select = [
    "F",  # Pyflakes
    "E",  # pycodestyle (error)
    "W",  # pycodestyle (warning)
    "I",  # isort
]
ignore = []
extend-include = ["*.ipynb"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    "scripts",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py310"
line-length = 96

[tool.ruff.isort]
known-first-party = ["unraphael"]
required-imports = ["from __future__ import annotations"]

[tool.isort]
profile = "black"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.bumpversion]
current_version = "0.1.0"

[[tool.bumpversion.files]]
filename = "src/unraphael/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""
